--- a/package.json
+++ b/package.json
@@ -13,10 +13,18 @@
   },
   "homepage": "https://github.com/htmlacademy-adaptive/86681-mishka",
   "devDependencies": {
-    "editorconfig-tools": "0.1.1"
+    "autoprefixer": "6.3.6",
+    "editorconfig-tools": "0.1.1",
+    "grunt": "1.0.1",
+    "grunt-contrib-less": "1.3.0",
+    "grunt-browser-sync": "2.2.0",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-postcss": "0.8.0"
   },
   "scripts": {
-    "test": "editorconfig-tools check *"
+    "test": "editorconfig-tools check *",
+    "build": "grunt less && grunt postcss",
+    "start": "npm run build && grunt serve"
   },
   "engines": {
     "node": "5.11"
